datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Squad {
  id                  Int  @id @default(autoincrement())

  managerId          Int @unique // Relacionando o managerId no squad
  projectId          Int @unique // Relacionando o projectId no squad

  developers         Developer[]

  manager            Manager @relation(fields: [managerId], references: [id])
  project            Project @relation(fields: [projectId], references: [id])
  
}

model Project {
  id                  Int @id @default(autoincrement())
  name                String @unique
  saleValue           Float
  startDate           DateTime
  endDate             DateTime
  hadDiscovery        Boolean
  havePrototype       Boolean
  clientName          String

  squad               Squad?
}

model Manager {
  id                  Int @id @default(autoincrement())
  email               String @unique
  password            String
  name                String
  course              String
  birthDate           DateTime
  semester            String
  entryDate           DateTime
  leadershipEntry     DateTime

  squad               Squad?
}

model Developer {

  id                  Int @id @default(autoincrement())
  email               String @unique
  password            String
  name                String
  course              String
  birthDate           DateTime
  semester            String
  entryDate           DateTime

  squadId            Int

  squad               Squad @relation(fields: [squadId], references: [id])
}
