//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Squad {
  id Int [pk, increment]
  managerId Int [unique, not null]
  projectId Int [unique, not null]
  developers Developer [not null]
  manager Manager [not null]
  project Project [not null]
}

Table Project {
  id Int [pk, increment]
  name String [unique, not null]
  saleValue Float [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  hadDiscovery Boolean [not null]
  havePrototype Boolean [not null]
  clientName String [not null]
  squad Squad
}

Table Manager {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  course String [not null]
  birthDate DateTime [not null]
  semester String [not null]
  entryDate DateTime [not null]
  leadershipEntry DateTime [not null]
  squad Squad
}

Table Developer {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  course String [not null]
  birthDate DateTime [not null]
  semester String [not null]
  entryDate DateTime [not null]
  squadId Int [not null]
  squad Squad [not null]
}

Ref: Squad.managerId - Manager.id

Ref: Squad.projectId - Project.id

Ref: Developer.squadId > Squad.id